--- a/bio-page/styles/global.css
+++ b/bio-page/styles/global.css
@@ -38,8 +38,8 @@
 
 	border: none;
 
-	width: 40px;
-	height: 40px;
+	width: clamp(40px, 5vw, 56px);
+	height: clamp(40px, 5vw, 56px);
 	border-radius: 50%;
 	background-color: #1a1a1a;
 
@@ -113,17 +113,27 @@ header {
 	top: 0;
 	left: 0;
 
-	width: 100%;
+	width: 200vw;
 	height: 72px;
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
+	font-size: clamp(0.9em, 576px, 1em);
+
 	z-index: 1;
+	transition: all 550ms ease-in-out;
+}
+
+header > * {
+	flex: 1;
+	text-align: center;
 }
 
 main {
+	position: relative;
+
 	width: 200vw;
 	height: 100%;
 	max-height: 100%;
@@ -145,46 +155,179 @@ main > section {
 	justify-content: center;
 	align-items: center;
 
-	gap: calc(16px - 1vw);
+	gap: calc(16px * 2vw);
+
+	transition: all 500ms ease-in-out;
 }
 
 section > * {
 	flex-grow: 0;
 }
 
+#left-section {
+	position: absolute;
+	left: 0;
+}
+
+#right-section {
+	position: absolute;
+	left: 100%;
+}
+
 @keyframes rotate-clip {
 	0% {
-		clip-path: polygon(57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%);
+		clip-path: polygon(
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%
+		);
 	}
 	10% {
-		clip-path: polygon(85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%);
+		clip-path: polygon(
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%
+		);
 	}
 	20% {
-		clip-path: polygon(94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%);
+		clip-path: polygon(
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%
+		);
 	}
 	30% {
-		clip-path: polygon(94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%);
+		clip-path: polygon(
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%
+		);
 	}
 	40% {
-		clip-path: polygon(84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%);
+		clip-path: polygon(
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%
+		);
 	}
 	50% {
-		clip-path: polygon(54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%);
+		clip-path: polygon(
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%
+		);
 	}
 	60% {
-		clip-path: polygon(27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%);
+		clip-path: polygon(
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%
+		);
 	}
 	70% {
-		clip-path: polygon(11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%);
+		clip-path: polygon(
+			11% 70%,
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%
+		);
 	}
 	80% {
-		clip-path: polygon(3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%);
+		clip-path: polygon(
+			3% 34%,
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%
+		);
 	}
 	90% {
-		clip-path: polygon(19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%);
+		clip-path: polygon(
+			19% 10%,
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%
+		);
 	}
 	100% {
-		clip-path: polygon(57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%);
+		clip-path: polygon(
+			57% 2%,
+			85% 13%,
+			94% 39%,
+			94% 61%,
+			84% 85%,
+			54% 94%,
+			27% 92%,
+			11% 70%,
+			3% 34%,
+			19% 10%
+		);
 	}
 }
 
@@ -224,7 +367,7 @@ section .container {
 }
 
 .subheader {
-	font-size: 0.9rem;
+	font-size: 1rem;
 	font-style: italic;
 
 	color: darkgray;
@@ -258,7 +401,7 @@ section .container {
 }
 
 .separator {
-	font-size: 0.75rem;
+	font-size: 0.9rem;
 	position: relative;
 	background-color: #1d1f1f;
 }
