--- a/bio-page/styles/global.css
+++ b/bio-page/styles/global.css
@@ -47,8 +47,6 @@
 	justify-content: center;
 	align-items: center;
 	outline-offset: 4px;
-
-	transition: all 0.1s ease-in-out;
 }
 
 .arrow-button-face {
@@ -90,9 +88,6 @@ button:active .arrow-button-face {
 	left: 16px;
 }
 
-.right-button:hover::after {
-}
-
 .hidden {
 	display: none;
 }
@@ -110,11 +105,11 @@ body {
 header {
 	position: fixed;
 
-	top: 0;
+	top: 1vh;
 	left: 0;
 
-	width: 200vw;
-	height: 72px;
+	width: 100vw;
+	height: 56px;
 
 	display: flex;
 	justify-content: center;
@@ -123,7 +118,7 @@ header {
 	font-size: clamp(0.9em, 576px, 1em);
 
 	z-index: 1;
-	transition: all 550ms ease-in-out;
+	transition: all 525ms ease-in-out;
 }
 
 header > * {
@@ -134,7 +129,7 @@ header > * {
 main {
 	position: relative;
 
-	width: 200vw;
+	width: 100vw;
 	height: 100%;
 	max-height: 100%;
 	overflow: hidden;
@@ -149,13 +144,13 @@ main > section {
 	height: 45vh;
 	max-height: 100%;
 
-	overflow: hidden;
+	overflow: visible;
 
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
-	gap: calc(16px * 2vw);
+	gap: 16px;
 
 	transition: all 500ms ease-in-out;
 }
@@ -174,255 +169,95 @@ section > * {
 	left: 100%;
 }
 
+.button-wrapper {
+	position: absolute;
+
+	display: flex;
+
+	justify-content: center;
+
+	gap: 24px;
+
+	top: 100%;
+	right: 0;
+
+	width: 100vw;
+	height: auto;
+
+	z-index: 1;
+}
+
+.social-button {
+	width: auto;
+	height: auto;
+
+	border-radius: 50%;
+	background-color: transparent;
+	color: #fff;
+
+	border: none;
+
+	cursor: pointer;
+
+	font-size: clamp(1.5rem, 4vw, 1.75rem);
+	text-align: center;
+}
+
 @keyframes rotate-clip {
 	0% {
-		clip-path: polygon(
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%
-		);
+		clip-path: polygon(57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%);
 	}
 	10% {
-		clip-path: polygon(
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%
-		);
+		clip-path: polygon(85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%);
 	}
 	20% {
-		clip-path: polygon(
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%
-		);
+		clip-path: polygon(94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%);
 	}
 	30% {
-		clip-path: polygon(
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%
-		);
+		clip-path: polygon(94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%);
 	}
 	40% {
-		clip-path: polygon(
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%
-		);
+		clip-path: polygon(84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%);
 	}
 	50% {
-		clip-path: polygon(
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%
-		);
+		clip-path: polygon(54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%);
 	}
 	60% {
-		clip-path: polygon(
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%
-		);
+		clip-path: polygon(27% 92%, 11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%);
 	}
 	70% {
-		clip-path: polygon(
-			11% 70%,
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%
-		);
+		clip-path: polygon(11% 70%, 3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%);
 	}
 	80% {
-		clip-path: polygon(
-			3% 34%,
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%
-		);
+		clip-path: polygon(3% 34%, 19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%);
 	}
 	90% {
-		clip-path: polygon(
-			19% 10%,
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%
-		);
+		clip-path: polygon(19% 10%, 57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%);
 	}
 	100% {
-		clip-path: polygon(
-			57% 2%,
-			85% 13%,
-			94% 39%,
-			94% 61%,
-			84% 85%,
-			54% 94%,
-			27% 92%,
-			11% 70%,
-			3% 34%,
-			19% 10%
-		);
+		clip-path: polygon(57% 2%, 85% 13%, 94% 39%, 94% 61%, 84% 85%, 54% 94%, 27% 92%, 11% 70%, 3% 34%, 19% 10%);
 	}
 }
 
-section img {
-	height: clamp(80%, 50vw, 100%);
+@keyframes shake {
+	10%,
+	90% {
+		transform: translate3d(-1px, 0, 0) rotate(5deg);
+	}
 
-	flex-grow: 0;
+	20%,
+	80% {
+		transform: translate3d(2px, 0, 0) rotate(5deg);
+	}
 
-	border-radius: 20px;
-	animation-name: rotate-clip;
-	animation-play-state: running;
-	animation-fill-mode: forwards;
-	animation-iteration-count: infinite;
-	animation-duration: 15s;
+	30%,
+	50%,
+	70% {
+		transform: translate3d(-4px, 0, 0) rotate(5deg);
+	}
 
-	transition: all 200ms ease-in-out;
-
-	object-fit: contain;
-}
-
-section img:hover {
-	cursor: pointer;
-}
-
-section .container {
-	display: flex;
-
-	flex-direction: column;
-
-	justify-content: center;
-	align-items: center;
-	gap: 16px;
-
-	width: calc(25vw + 16px);
-
-	font-size: 1.5rem;
-}
-
-.subheader {
-	font-size: 1rem;
-	font-style: italic;
-
-	color: darkgray;
-}
-
-.greetings {
-	display: flex;
-	flex-direction: column;
-
-	text-align: center;
-
-	align-items: center;
-	justify-content: center;
-
-	margin-bottom: 8px;
-}
-
-.greetings h2 {
-	font-size: clamp(1rem, 5vw, 2rem);
-}
-
-.container .button-holder {
-	display: flex;
-
-	width: 100%;
-
-	gap: 8px;
-
-	justify-content: space-between;
-	align-items: center;
-}
-
-.separator {
-	font-size: 0.9rem;
-	position: relative;
-	background-color: #1d1f1f;
-}
-
-.separator::before,
-.separator::after {
-	content: '';
-	width: 100%;
-	height: 1px;
-
-	background-color: #fff;
-}
-
-.separator::before {
-	position: absolute;
-	top: 50%;
-	left: -115%;
-}
-
-.separator::after {
-	position: absolute;
-	top: 50%;
-	left: 115%;
+	40%,
+	60% {
+		transform: translate3d(4px, 0, 0) rotate(5deg);
+	}
 }
